--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 border: 1px solid black;
                 margin: 0;
                 padding: 0;
+                background-color: light-brown;
             }
 
             .goban td {
