rendering the moves

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 border: 1px solid black;
                 margin: 0;
                 padding: 0;
-                background-color: light-brown;
+                background-color: brown;
             }
 
             .goban td {
@@ -20,11 +20,11 @@
                 padding: 0;
             }
 
-            .goban td.black {
+            .goban td.Black {
                 background-color: black;
             }
 
-            .goban td.white {
+            .goban td.White {
                 background-color: white;
             }
         </style>
